--- a/My_Theme_Collection/NewAkameGaKill.theme.css
+++ b/My_Theme_Collection/NewAkameGaKill.theme.css
@@ -7,7 +7,7 @@
 
 /* Main Background */
 .app-2CXKsg {
-    background-image: url(https://i.imgur.com/1JVM8CU.jpg);
+    background-image: url(https://cdna.artstation.com/p/assets/images/images/051/032/762/large/kurozaki-sakura-jpgfd.jpg?1656309649);
     background-size: cover;
     background-color: transparent;
 }
